[project]
name = "cv-digital-twin"
version = "0.1.0"
description = "CV Digital Twin MCP Server - A digital twin that answers questions based on your CV"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "pdfplumber>=0.10.0",
    "PyPDF2>=3.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

